# MLOps_Basics

./: .gitignore  Dockerfile  README.md  app.py  convert_model_to_onnx.py  data.py  docker-compose.yml  inference.py  inference_onnx.py  model.py  pyproject.toml  train.py  utils.py  wandb_sweep.yaml
.dvc/: config
.github/workflows/: basic.yaml  build_docker_image.yaml
configs/: config.yaml
configs/training/: default.yaml
learning/: config.yaml  read_data.py  test_hydra.py
models/: .gitignore  epoch=0-step=33.ckpt.dvc  epoch=2-step=201.ckpt.dvc  epoch=4-step=165.ckpt.dvc
